microservices/app-milestone-backend/k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidm-app-milestone-backend-svc
spec:
  selector:
    app: lidm-app-milestone-backend
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
